# motiondrive

./: .gitignore  ANDROID_DOWNLOAD_FIX.md  MOBILE_UI_ARCHITECTURE.md  README.md  drizzle.config.ts  env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  set-b2-cors.js
desktop/: build-splash.js  index.html.template  package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: default.toml
desktop/src-tauri/src/: main.rs
mobile/: capacitor.config.json  motiondrive-key  package.json
mobile/android/: capacitor.settings.gradle  variables.gradle
mobile/android/app/: build.gradle  capacitor.build.gradle  new.js
mobile/public/: index.html
scratch/: approve_users.ts  check_users.ts  split_frontend.mjs
src/app/: capacitor-mobile.css  drive.css  globals.css  layout.tsx  operations-animations.css  page.old.tsx  page.tsx  providers.tsx
src/app/actions/: admin.ts  auth.ts  drive.ts  share.ts
src/app/actions/drive/: bulk.ts  (+10 more)
src/app/admin/: admin.css  page.tsx
src/app/awaiting-approval/: page.tsx
src/app/login/: page.tsx
src/app/reset-password/: page.tsx
src/app/signup/: page.tsx
src/components/admin/: InvitesTab.tsx  SharedLinksTab.tsx  UsageTab.tsx  UsersTab.tsx
src/db/: index.ts  schema.ts
src/lib/: auth-client.ts  auth-server.ts  auth.ts  b2.ts  google-sign-in.ts  kv-cache.ts  mobile-notifications.ts  native-bridge.ts  platform.ts  r2.ts  resend.ts
src/types/: drive.ts
(+51 files in other folders)
